--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ ark-ec = { version="^0.2.0", default-features = false }
 ark-poly = { version="^0.2.0", default-features = false }
 
 ark-bls12-381 = { version="^0.2.0", default-features = false, features = [ "curve" ] }
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "dbs"
+harness = false
